# harness_v2

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.artifacts/tsk_07ca31a4e50f4d64/: resolve-01.md
.artifacts/tsk_07f89f6403264fb1/: architecture-01.md  design-01.md  development-01.md  plan-01.md  review-01.md
.artifacts/tsk_089058b0feff4ff6/: resolve-01.md
.artifacts/tsk_0ad2194cf2404c9c/: architecture-01.md  design-01.md  development-01.md  plan-01.md  review-01.md
.artifacts/tsk_0b2b9f44aaa34b03/: architecture-01.md  design-01.md  development-01.md  plan-01.md  review-01.md
.artifacts/tsk_0b8b553ee24f4a06/: resolve-01.md
.artifacts/tsk_0c1ebe30bc6d4286/: architecture-01.md  architecture-02.md  design-01.md  design-02.md  plan-01.md  plan-02.md
.artifacts/tsk_1164e0446678458f/: architecture-01.md  design-01.md  development-01.md  plan-01.md  review-01.md
.artifacts/tsk_150379a03d154b87/: resolve-01.md
.artifacts/tsk_1daa05589dcf463e/: architecture-01.md  design-01.md  development-01.md  plan-01.md  review-01.md
.artifacts/tsk_2631964987af47b8/: architecture-01.md  architecture-02.md  architecture-03.md  design-01.md  design-02.md  design-03.md  development-01.md  plan-01.md  plan-02.md  plan-03.md  review-01.md
.artifacts/tsk_2b37920bbd364a69/: resolve-01.md
.artifacts/tsk_2c01fa1590214f4b/: architecture-01.md  design-01.md  development-01.md  development-02.md  plan-01.md  review-01.md  review-02.md
.artifacts/tsk_2fb79172220a45f3/: architecture-01.md  design-01.md  development-01.md  plan-01.md  review-01.md
.artifacts/tsk_3325001f160e46d9/: architecture-01.md  design-01.md  development-01.md  development-02.md  plan-01.md  review-01.md  review-02.md
.artifacts/tsk_35a8a3c0bb52482b/: architecture-01.md  (+4 more)
.conductor/: settings.toml
deploy/: com.agentharness.plist.template  install.sh
scripts/: build_docs.py
tests/: conftest.py  fakes.py  test_admin_writes_are_seen_live.py  test_adr_docs.py  test_agent_behavior.py  test_agent_ports.py  test_agent_registry.py  test_api_agents.py  test_api_artifacts.py  test_api_html.py  test_api_html_mobile.py  test_api_issue_import.py  test_api_json.py  test_api_process_routes.py  test_api_sources.py  test_api_sse.py  test_api_update.py  test_api_workflows.py  test_app.py  test_architecture.py  test_architecture_model.py  test_artifacts_memory.py  test_board_e2e.py  test_board_port.py  test_board_version.py  test_checks.py  test_claude_cli.py  test_claude_md_module_map.py  test_cli.py  test_command_runner.py  test_composite_events.py  test_config.py  test_consumer.py  test_cron_schedule.py  test_deploy_template.py  test_dev_pipeline.py  test_dispatcher.py  test_docs_site.py  test_dummy_behavior.py  test_executor.py  (+102 more)
(+423 files in other folders)
