[project]
name = "harness"
version = "0.8.1"
description = "Orchestration harness for multiple agents — phase 1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
harness = "harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"harness.api" = ["templates/*.html", "templates/admin/*.html", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.semantic_release]
# The version lives in exactly one place; everything else reads it via
# importlib.metadata (see cli.version_string).
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}\n\n[skip ci]"
build_command = ""            # releases are installed from git, not from a wheel
upload_to_pypi = false        # the name `harness` is taken on PyPI
upload_to_release = true

[tool.semantic_release.commit_parser_options]
# Conventional commits. Only feat/fix move the version; docs/chore/test/refactor
# ride along in the notes without cutting a release on their own.
allowed_tags = ["feat", "fix", "perf", "docs", "chore", "test", "refactor", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
